--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,8 @@
             "styles": [
               "src/styles.css"
             ],
+            
+            
             "scripts": []
           },
           "configurations": {
@@ -87,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
